syntax = "proto3";
package com.vang;
option java_package = "com.vang.user_service.grpc.generated";
option java_outer_classname = "UserServerGrpc";
option java_multiple_files = true;

service AuthenticateUser {
  rpc getUserInfoByUsername(GetUserInfoByUsernameRequest) returns (GetUserInfoByUsernameResponse);
}

message GetUserInfoByUsernameRequest {
  string username = 1;
}

message GetUserInfoByUsernameResponse {
  bool status = 1;
  string userResponse = 2;
}